--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "playwright test"
+    "test": "playwright test",
+    "circle": "ts-node --esm ./scripts/circle.ts"
   },
   "devDependencies": {
     "@playwright/test": "^1.36.1",
+    "@types/yargs": "^17.0.24",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   },
@@ -19,6 +21,8 @@
     "ably": "^1.2.42",
     "nanoid": "^4.0.2",
     "selenium-webdriver": "^4.10.0",
-    "unique-username-generator": "^1.1.3"
+    "ts-node": "^10.9.1",
+    "unique-username-generator": "^1.1.3",
+    "yargs": "^17.7.2"
   }
 }
